test/error/literaloverflow.lua
local a = 0x1ffffffffffffffffhl
